# RAG-System

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
frontend/: config.py
frontend/.streamlit/: config.toml
frontend/components/: api_client.py  auth.py  chat_ui.py  utils.py
frontend/pages/: admin.py  chat.py  documents.py  search.py  settings.py
scripts/: dev.py
src/: __init__.py
src/api/: __init__.py  auth.py  deduplication.py  documents.py  health.py  search.py
src/auth/: __init__.py  jwt_utils.py  models.py  security.py
src/core/: __init__.py  config.py  logging.py
src/documents/: __init__.py  chunking.py  deduplication.py  embeddings.py  models.py  processors.py  service.py
src/llm/: __init__.py  models.py  prompts.py  service.py
src/search/: __init__.py  conversation.py  hybrid_search.py  models.py  reranking.py  semantic_search.py  service.py
src/vector_store/: __init__.py  chroma_client.py
tests/: conftest.py  test_api.py  test_auth.py  test_documents.py  test_integration.py  test_llm.py  test_search.py  test_vector_store.py
